# DP-Estimation

./: RDPexperiments_theory.py  RDPtruncatedLaplace.py  estimator.py  estimatorRDP.py  experiments.ipynb  experiments_safety.py  experiments_theory.py  histogramEstimator.py  practical_n.py  pyproject.toml  requirements.txt  res.txt  resRDP.txt  results.csv  table practical RDP.py  table practical.py  test_estimator.py  truncatedGaussian.py  truncatedLaplace.py
results/: gaussian.csv  gaussian.json  gaussian_rdp.csv  gaussian_rdp.json  laplace.csv  laplace.json  laplace_rdp.csv  laplace_rdp.json  results.csv
